Version 0.4.0.
* ⬆️ Upgrade to Quarkus 3.32.1.

* 💚 Fix CI script.

* 💚 Fix CI script.

* 💚 Fix CI script.

* 👷 Update CI script to build native images.

* 💚 Update CI script.

* 🔖 Version 0.3.2.

* 💚 Remove upx compression.

* 💚 Fix CI script.

* 💚 Fix CI variables.

* 💚 Fix CI variables.

* 💚 Add debug commands.

* 💚 Fix CI script and dockerfile.

* 💚 Fix .dockerignore

* 💚 Fix CI permissions.

* 💚 Fix CI script.

* 🔖 Version bump 0.3.3.

* 💚 Update CI timeouts and create gradle cache.

* 💚 Remove gradle cache.

* 🔖 Version bump 0.3.5.

* ➖ Remove Prometheus metric endpoint.

* 🔖 Version bump 0.4.0.