@@ -1,6 +1,6 @@
 plugins {
-    kotlin("jvm") version "2.2.21"
-    kotlin("plugin.allopen") version "2.2.21"
+    kotlin("jvm") version "2.3.10"
+    kotlin("plugin.allopen") version "2.3.10"
     id("io.quarkus")
 }
 
@@ -20,12 +20,10 @@ dependencies {
         ),
     )
     implementation("io.smallrye.config:smallrye-config-source-file-system")
-    implementation("io.quarkus:quarkus-micrometer-registry-prometheus")
     implementation("io.quarkus:quarkus-smallrye-openapi")
     implementation("io.quarkus:quarkus-smallrye-health")
     implementation("io.quarkus:quarkus-rest")
     implementation("io.quarkus:quarkus-rest-jackson")
-    implementation("io.quarkus:quarkus-container-image-docker")
     implementation("io.quarkus:quarkus-info")
     implementation("io.quarkus:quarkus-kotlin")
     implementation("io.quarkus:quarkus-arc")
@@ -37,7 +35,7 @@ dependencies {
 }
 
 group = "com.testainers"
-version = "0.3.0"
+version = "0.4.0"
 
 java {
     sourceCompatibility = JavaVersion.VERSION_21
@@ -45,13 +43,6 @@ java {
 }
 
 tasks.withType<Test> {
-    systemProperty(
-        "java.util.logging.manager",
-        "org.jboss.logmanager.LogManager",
-    )
-
-    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-
     testLogging {
         events(
             "PASSED",
